<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/quantity"

         />
    <Button
        android:id="@+id/decrement"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/plus"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:onClick="increaseOrder"
        />
    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantityValue"
        android:textSize="16sp"

        />
    <Button
        android:id="@+id/increment"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:text="@string/minus"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:onClick="decreaseOrder"
        />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/order"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order"
        android:onClick = "submitOrder"
        />



</LinearLayout>